[package]
name = "rneko"
version = "1.0.0"
authors = ["Mateusz Czarnecki (DemwE)"]
description = "A simple CLI tool for download random nekos."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.6", features = ["derive"]}
colorful = "0.2.2"
directories = "5.0.1"
features = "0.10.0"
indicatif = {version = "0.17.7", features = ["improved_unicode", "unicode-segmentation"]}
reqwest = {version = "0.11.21", features = ["blocking", "json", "stream"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"


